Update link names
Some further minor changes, rephrasings and additions

--- a/julia-intro/docs/01-julia-intro-intro.ipynb
+++ b/julia-intro/docs/01-julia-intro-intro.ipynb
@@ -95,9 +95,8 @@
        "verbosefunc (generic function with 1 method)"
       ]
      },
-     "execution_count": 2,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -132,9 +131,8 @@
        "go_faster (generic function with 1 method)"
       ]
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -156,7 +154,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.090205 seconds (269.89 k allocations: 18.373 MiB, 99.97% compilation time)\n"
+      "  0.061545 seconds (348.80 k allocations: 17.468 MiB, 99.97% compilation time)\n"
      ]
     },
     {
@@ -175,9 +173,8 @@
        " 18.0  28.0  38.0  48.0  58.0  68.0  78.0  88.0  98.0  108.0"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -203,7 +200,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.000011 seconds (1 allocation: 896 bytes)\n"
+      "  0.000004 seconds (2 allocations: 944 bytes)\n"
      ]
     },
     {
@@ -222,9 +219,8 @@
        " 19.7616  29.7616  39.7616  49.7616     79.7616  89.7616  99.7616  109.762"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -243,15 +239,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.9.3",
+   "display_name": "Julia 1.11.6",
    "language": "julia",
-   "name": "julia-1.9"
+   "name": "julia-1.11"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.9.3"
+   "version": "1.11.6"
   }
  },
  "nbformat": 4,
