--- a/julia-intro/docs/03-julia-intro-syntax-operators-variables.ipynb
+++ b/julia-intro/docs/03-julia-intro-syntax-operators-variables.ipynb
@@ -114,7 +114,7 @@
     "| `~x`       | bitwise not                                                              |\n",
     "| `x & y`    | bitwise and                                                              |\n",
     "| `x \\| y`   | bitwise or                                                               |\n",
-    "| `x ⊻ y`    | bitwise xor (exclusive or)                                               |"
+    "| `x ⊻ y`    | bitwise xor (exclusive or) (can be typed using `\\xor<tab>`)              |"
    ]
   },
   {
@@ -250,7 +250,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Julia also has a `===` comparison operator that is `true` when two objects are the same (not just the same value(s), but really the same object)"
+    "Julia also has a `===` comparison operator that is `true` when two objects are the same (not just the same value(s), but really the same object, \"no program could distinguish them\")"
    ]
   },
   {
@@ -288,7 +288,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Julia allows you to chain comparisons:"
+    "Julia allows you to chain comparisons, where `a op1 b op2 c` is equivalent to `a op1 b && b op2 c`, (including [short-circuit evaluation](https://en.wikipedia.org/wiki/Short-circuit_evaluation)):"
    ]
   },
   {
@@ -381,7 +381,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Julia will generally handle mixed type arithmetic smoothly and safely (this is done by *promoting* variables):"
+    "Julia will generally handle mixed type arithmetic smoothly and safely (this is done by [*promoting*](https://docs.julialang.org/en/v1/manual/conversion-and-promotion/#Promotion) variables):"
    ]
   },
   {
@@ -421,22 +421,22 @@
    "outputs": [
     {
      "ename": "InexactError",
-     "evalue": "InexactError: trunc(Int16, 12335124)",
+     "evalue": "InexactError: trunc(Int16, 0x0000000000bc3814)",
      "output_type": "error",
      "traceback": [
-      "InexactError: trunc(Int16, 12335124)\n",
+      "InexactError: trunc(Int16, 0x0000000000bc3814)\n",
       "\n",
       "Stacktrace:\n",
-      " [1] throw_inexacterror(f::Symbol, #unused#::Type{Int16}, val::UInt64)\n",
-      "   @ Core ./boot.jl:634\n",
+      " [1] throw_inexacterror(::Symbol, ::Vararg{Any})\n",
+      "   @ Core ./boot.jl:750\n",
       " [2] checked_trunc_sint\n",
-      "   @ ./boot.jl:656 [inlined]\n",
+      "   @ ./boot.jl:764 [inlined]\n",
       " [3] toInt16\n",
-      "   @ ./boot.jl:687 [inlined]\n",
+      "   @ ./boot.jl:795 [inlined]\n",
       " [4] Int16(x::UInt64)\n",
-      "   @ Core ./boot.jl:782\n",
+      "   @ Core ./boot.jl:890\n",
       " [5] top-level scope\n",
-      "   @ ~/docs/JuliaHEP-2023/julia-intro/docs/julia-intro-syntax-operators-variables.ipynb:1"
+      "   @ ~/repos/hep-tutorial/julia-intro/docs/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X41sZmlsZQ==.jl:1"
      ]
     }
    ],
@@ -511,11 +511,11 @@
       "\n",
       "Stacktrace:\n",
       " [1] Int64\n",
-      "   @ ./float.jl:900 [inlined]\n",
-      " [2] convert(#unused#::Type{Int64}, x::Float64)\n",
+      "   @ ./float.jl:994 [inlined]\n",
+      " [2] convert(::Type{Int64}, x::Float64)\n",
       "   @ Base ./number.jl:7\n",
       " [3] top-level scope\n",
-      "   @ ~/docs/JuliaHEP-2023/julia-intro/docs/julia-intro-syntax-operators-variables.ipynb:1"
+      "   @ ~/repos/hep-tutorial/julia-intro/docs/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X45sZmlsZQ==.jl:1"
      ]
     }
    ],
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +764,7 @@
     "\n",
     "@show haskey(farmyard_sounds,\"pig\")\n",
     "\n",
-    "@show farmyard_sounds[\"🐱\"] = \"Meow\" ;\n",
+    "@show farmyard_sounds[\"🐱\"] = \"Meow\"\n",
     "\n",
     "farmyard_sounds"
    ]
@@ -843,15 +843,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.9.3",
+   "display_name": "Julia 1.11.6",
    "language": "julia",
-   "name": "julia-1.9"
+   "name": "julia-1.11"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.9.3"
+   "version": "1.11.6"
   }
  },
  "nbformat": 4,
