--- a/julia-intro/docs/06-julia-intro-anonymous-and-do-block.ipynb
+++ b/julia-intro/docs/06-julia-intro-anonymous-and-do-block.ipynb
@@ -50,9 +50,8 @@
        " -2"
       ]
      },
-     "execution_count": 1,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -82,9 +81,8 @@
        " -2"
       ]
      },
-     "execution_count": 2,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -125,9 +123,8 @@
        "   1.0"
       ]
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -167,9 +164,8 @@
        "   1.0"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -198,27 +194,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "open(\"somefile.txt\", write=true) do io\n",
     "    write(io, \"I added this line!\\n\")\n",
-    "end"
+    "end;"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.9.3",
+   "display_name": "Julia 1.11.6",
    "language": "julia",
-   "name": "julia-1.9"
+   "name": "julia-1.11"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.9.3"
+   "version": "1.11.6"
   }
  },
  "nbformat": 4,
