--- a/julia-intro/docs/07-julia-intro-multiple-dispatch.ipynb
+++ b/julia-intro/docs/07-julia-intro-multiple-dispatch.ipynb
@@ -2,8 +2,26 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "f7189917-6950-4037-8d8e-6e9f09b1fdeb",
+   "metadata": {
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "source": [
+    "# Multiple Dispatch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5175cbbd",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "You may have noticed that we seem to write functions in Julia much as we do in Python: without any requirement for explicit types.\n",
     "\n",
@@ -14,7 +32,12 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "aa9d2eb3",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -22,9 +45,8 @@
        "30"
       ]
      },
-     "execution_count": 1,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -39,18 +61,31 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "fca9673d",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "raises-exception"
+    ]
+   },
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "MethodError: no method matching multiply(::Float64, ::Int64)\n\n\u001b[0mClosest candidates are:\n\u001b[0m  multiply(\u001b[91m::Int64\u001b[39m, ::Int64)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[35mMain\u001b[39m \u001b[90m\u001b[4mIn[1]:1\u001b[24m\u001b[39m\n",
+     "ename": "MethodError",
+     "evalue": "MethodError: no method matching multiply(::Float64, ::Int64)\nThe function `multiply` exists, but no method is defined for this combination of argument types.\n\nClosest candidates are:\n  multiply(!Matched::Int64, ::Int64)\n   @ Main ~/repos/hep-tutorial/julia-intro/docs/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_W2sZmlsZQ==.jl:1\n",
      "output_type": "error",
      "traceback": [
-      "MethodError: no method matching multiply(::Float64, ::Int64)\n\n\u001b[0mClosest candidates are:\n\u001b[0m  multiply(\u001b[91m::Int64\u001b[39m, ::Int64)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[35mMain\u001b[39m \u001b[90m\u001b[4mIn[1]:1\u001b[24m\u001b[39m\n",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope",
-      "   @ In[2]:1"
+      "MethodError: no method matching multiply(::Float64, ::Int64)\n",
+      "The function `multiply` exists, but no method is defined for this combination of argument types.\n",
+      "\n",
+      "Closest candidates are:\n",
+      "  multiply(!Matched::Int64, ::Int64)\n",
+      "   @ Main ~/repos/hep-tutorial/julia-intro/docs/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_W2sZmlsZQ==.jl:1\n",
+      "\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ ~/repos/hep-tutorial/julia-intro/docs/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_W3sZmlsZQ==.jl:1"
      ]
     }
    ],
@@ -61,7 +96,12 @@
   {
    "cell_type": "markdown",
    "id": "8cbb1bac",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "As you can see, unlike some versions of Python, if we do specify types in our function declaration, Julia takes us seriously - it will not provide the function for arguments with other types.\n",
     "\n",
@@ -74,7 +114,12 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "f642695b",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -82,16 +127,14 @@
        "multiply (generic function with 2 methods)"
       ]
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
     "function multiply(x ::Float64, y ::Int64)\n",
     "    x*y + 1 \n",
-    "end\n",
-    "\n"
+    "end"
    ]
   },
   {
@@ -101,7 +144,7 @@
    "source": [
     "and you notice that when we do so, Julia notes that multiply is now a \"generic function with 2 methods\" - those methods being \"multiply a Float64 and an Int64\" and \"multiply two Int64s\"\n",
     "\n",
-    "Julia will always pick the version of our function that matches the types of its arguments - this is called **Multiple Dispatch** and is the basis for how Julia implements \"Object orientation\" without classes. Because the \"method\" of the function used depends on the types of *all* of its arguments, Julia does not treat methods as being \"owned\" by the first argument's type - you can't type \"myobject.method()\" - instead, you simply use the function \"as is\":"
+    "Julia will always pick the version of our function that matches the types of its arguments - this is called **Multiple Dispatch** and is the basis for how Julia implements Object Orientation without classes. Because the \"method\" of the function used depends on the types of *all* of its arguments, Julia does not treat methods as being \"owned\" by the first argument's type - you can't type \"myobject.method()\" - instead, you simply use the function \"as is\":"
    ]
   },
   {
@@ -116,13 +159,12 @@
        "12.0"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "multiply(5.5, 2) #Float64, Int64\n"
+    "multiply(5.5, 2) #Float64, Int64"
    ]
   },
   {
@@ -137,9 +179,8 @@
        "30"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -166,9 +207,8 @@
        "multiply (generic function with 3 methods)"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -189,9 +229,8 @@
        "12.0"
       ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -203,7 +242,7 @@
    "id": "b945398b",
    "metadata": {},
    "source": [
-    "Julia's type system is hierarchical, so we can also specify the domain of a method via higher-order types (for example, that a function works only on Numbers - which Ints and Floats are both members of -  via):"
+    "Julia's type system is hierarchical, so we can also specify the domain of a method via higher-order types (for example, that a function works only on `Numbers` - which `Ints` and `Floats` are both descendants of -  via):"
    ]
   },
   {
@@ -235,18 +274,28 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "2f658fa4",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "raises-exception"
+    ]
+   },
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "MethodError: no method matching myfunc(::String)\n\n\u001b[0mClosest candidates are:\n\u001b[0m  myfunc(\u001b[91m::Number\u001b[39m)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[35mMain\u001b[39m \u001b[90m\u001b[4mIn[8]:1\u001b[24m\u001b[39m\n",
+     "ename": "MethodError",
+     "evalue": "MethodError: no method matching myfunc(::String)\nThe function `myfunc` exists, but no method is defined for this combination of argument types.\n\nClosest candidates are:\n  myfunc(!Matched::Number)\n   @ Main ~/repos/hep-tutorial/julia-intro/docs/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X16sZmlsZQ==.jl:1\n",
      "output_type": "error",
      "traceback": [
-      "MethodError: no method matching myfunc(::String)\n\n\u001b[0mClosest candidates are:\n\u001b[0m  myfunc(\u001b[91m::Number\u001b[39m)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[35mMain\u001b[39m \u001b[90m\u001b[4mIn[8]:1\u001b[24m\u001b[39m\n",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope",
-      "   @ In[9]:1"
+      "MethodError: no method matching myfunc(::String)\n",
+      "The function `myfunc` exists, but no method is defined for this combination of argument types.\n",
+      "\n",
+      "Closest candidates are:\n",
+      "  myfunc(!Matched::Number)\n",
+      "   @ Main ~/repos/hep-tutorial/julia-intro/docs/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X16sZmlsZQ==.jl:1\n",
+      "\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ ~/repos/hep-tutorial/julia-intro/docs/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X20sZmlsZQ==.jl:1"
      ]
     }
    ],
@@ -259,7 +308,7 @@
    "id": "cb6ccffa",
    "metadata": {},
    "source": [
-    "A function without any type specifiers is equivalent to one where all the type specifiers are ::Any - the \"Any\" type matches all types in the system.\n",
+    "A function without any type specifiers is equivalent to one where all the type specifiers are `::Any` - the \"Any\" type matches all types in the system.\n",
     "\n",
     "We can also, as in C++ etc, use parameterised types to restrict relationships between the types of arguments - for example, that all arguments must be of the same type (and in this case, that type is a kind of Number):"
    ]
@@ -276,9 +325,8 @@
        "5"
       ]
      },
-     "execution_count": 10,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -293,18 +341,28 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "e7d1f815",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "raises-exception"
+    ]
+   },
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "MethodError: no method matching myfunc(::Float64, ::Int64)\n\n\u001b[0mClosest candidates are:\n\u001b[0m  myfunc(::Number)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[35mMain\u001b[39m \u001b[90m\u001b[4mIn[8]:1\u001b[24m\u001b[39m\n",
+     "ename": "MethodError",
+     "evalue": "MethodError: no method matching myfunc(::Float64, ::Int64)\nThe function `myfunc` exists, but no method is defined for this combination of argument types.\n\nClosest candidates are:\n  myfunc(::Number)\n   @ Main ~/repos/hep-tutorial/julia-intro/docs/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X16sZmlsZQ==.jl:1\n",
      "output_type": "error",
      "traceback": [
-      "MethodError: no method matching myfunc(::Float64, ::Int64)\n\n\u001b[0mClosest candidates are:\n\u001b[0m  myfunc(::Number)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[35mMain\u001b[39m \u001b[90m\u001b[4mIn[8]:1\u001b[24m\u001b[39m\n",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope",
-      "   @ In[11]:1"
+      "MethodError: no method matching myfunc(::Float64, ::Int64)\n",
+      "The function `myfunc` exists, but no method is defined for this combination of argument types.\n",
+      "\n",
+      "Closest candidates are:\n",
+      "  myfunc(::Number)\n",
+      "   @ Main ~/repos/hep-tutorial/julia-intro/docs/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X16sZmlsZQ==.jl:1\n",
+      "\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ ~/repos/hep-tutorial/julia-intro/docs/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X23sZmlsZQ==.jl:1"
      ]
     }
    ],
@@ -329,49 +387,47 @@
     {
      "data": {
       "text/plain": [
-       "MyStruct(4, 0)"
+       "RelativisticSpeed(0.994475138121547)"
       ]
      },
-     "execution_count": 12,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "struct MyStruct\n",
-    "    a ::Int64\n",
-    "    b ::Int64\n",
+    "struct RelativisticSpeed\n",
+    "    v ::Float64\n",
     "end\n",
     "\n",
     "import Base.+   #necessary to let us modify this function\n",
     "\n",
-    "function +(x::MyStruct, y::MyStruct) \n",
-    "    MyStruct(x.a+y.a, x.b-y.b) \n",
+    "function +(x::RelativisticSpeed, y::RelativisticSpeed) \n",
+    "    RelativisticSpeed(   (x.v + y.v) / (1 + x.v*y.v)   ) \n",
     "end\n",
     "\n",
-    "MyStruct(2,3) + MyStruct(2,3)"
+    "RelativisticSpeed(0.9)+RelativisticSpeed(0.9)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8face1d9",
+   "cell_type": "markdown",
+   "id": "0825486e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Whilst this risks the same issues as operator overloading in C++ - breaking natural assumptions about the behaviour of operations - it can also be very useful, especially if particular algorithms have efficient representations for a given type or types."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.9.2",
+   "display_name": "Julia 1.11.6",
    "language": "julia",
-   "name": "julia-1.9"
+   "name": "julia-1.11"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.9.2"
+   "version": "1.11.6"
   }
  },
  "nbformat": 4,
