--- a/julia-intro/docs/09-julia-intro-julia-community.ipynb
+++ b/julia-intro/docs/09-julia-intro-julia-community.ipynb
@@ -41,9 +41,9 @@
     "It's probably best to think of Pkg as similar to Cargo for Rust: it doesn't just manage packages for your general Julia installation, it also manages the environment for a Julia project.\n",
     "\n",
     "The `activate` verb, with a directory path, causes Pkg to consider that directory as the root of a project or package, and manage packages relative to that.\n",
-    "Any package will have a \"Project.toml\" file which represents the dependencies and metadata for the project, which Pkg creates, as well as a \"Manifest.toml\" which represents the precise state of all packages installed (version and hashes), including dependencies of dependencies. \n",
+    "Any package will have a \"Project.toml\" file which represents the dependencies and metadata for the project, which Pkg creates, as well as a \"Manifest.toml\" which represents the precise state of all packages installed (version and hashes), including dependencies of dependencies. This file is commonly *not* checked into repositories, since the actually installed packages can differ depending on a user's environment.\n",
     "\n",
-    "You will see that this repository has such files, showing the packages we need to import for the examples.\n",
+    "You will see that this repository has Project.toml, showing the packages we need to import for the examples.\n",
     "\n",
     "\n",
     "### The Pkg \"environment\"\n",
@@ -61,7 +61,7 @@
     "is the same as\n",
     "\n",
     "```\n",
-    "    add foo\n",
+    "    Pkg> add foo\n",
     "```\n",
     "\n",
     "within the Pkg sub environment.\n",
