--- a/julia-intro/docs/02-julia-intro-installation.ipynb
+++ b/julia-intro/docs/02-julia-intro-installation.ipynb
@@ -13,18 +13,29 @@
    "source": [
     "## Standard Installation\n",
     "\n",
-    "Installing Julia is very easy:\n",
+    "Installing Julia is very easy, as it comes with its own version manager `juliaup`:\n",
     "\n",
-    "- Go to the Julia [downloads](https://julialang.org/downloads/) page\n",
-    "- Pick the installer for your platform, use the *current stable release*\n",
-    "- Unpack/install locally"
+    "- Go to the Julia [install](https://julialang.org/install/) page\n",
+    "- Download and install `juliaup` for your platform (it can also be found in the Arch User Repository)\n",
+    "\n",
+    "Note: You can still download julia versions manually, but this is no longer recommended. tarballs can be found [here](https://julialang.org/downloads/)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "N.B. If you installed a tarball, you might need to add Julia's `bin` directory to your `PATH`."
+    "## Using juliaup\n",
+    "\n",
+    "The usage is generally similar to and inspired by `rustup`:\n",
+    "\n",
+    "- Install a julia version: `juliaup add <version>`, for example `lts`, `release`, `nightly`, or a specific version number\n",
+    "- List all available versions to install: `juliaup list`\n",
+    "- Set a default version: `juliaup default <version>`\n",
+    "- Update installed versions: `juliaup up`\n",
+    "- Update juliaup itself: `juliaup self update`\n",
+    "\n",
+    "For the purpose of this tutorial, use `lts` (currently 1.10) or `release` (currently 1.11)."
    ]
   },
   {
@@ -33,6 +44,8 @@
    "source": [
     "## Running Julia\n",
     "\n",
+    "Running julia starts juliaup's default version:\n",
+    "\n",
     "```julia\n",
     "➜  ~ julia\n",
     "               _\n",
@@ -40,12 +53,14 @@
     "  (_)     | (_) (_)    |\n",
     "   _ _   _| |_  __ _   |  Type \"?\" for help, \"]?\" for Pkg help.\n",
     "  | | | | | | |/ _` |  |\n",
-    "  | | |_| | | | (_| |  |  Version 1.9.3 (2023-08-24)\n",
+    "  | | |_| | | | (_| |  |  Version 1.11.6 (2025-07-09)\n",
     " _/ |\\__'_|_|_|\\__'_|  |  Official https://julialang.org/ release\n",
     "|__/                   |\n",
     "\n",
-    "julia>\n",
-    "```"
+    "julia> \n",
+    "```\n",
+    "\n",
+    "You can start a specific installed julia version using `julia +<version>`"
    ]
   },
   {
@@ -119,46 +134,6 @@
     "The answer is 385\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Bonus Installation Method: `juliaup`\n",
-    "\n",
-    "Another way to manage a Julia install is with [Juliaup](https://github.com/JuliaLang/juliaup) - a Julia toolkit installation manager inspired by the excellent *Rustup* for the Rust programming language.\n",
-    "\n",
-    "Juliaup is available from the Windows App Store, if you're developing with a Microsoft system, or via direct installation script for MacOS and Linux distributions (see the link)\n",
-    "\n",
-    "Once installed, you can simply type in a terminal:\n",
-    "\n",
-    "```bash\n",
-    "juliaup list\n",
-    "```\n",
-    "\n",
-    "to show all the versions of Julia available.\n",
-    "\n",
-    "We will work with the latest `release` version on all platforms (1.9 as of writing) so simply type\n",
-    "\n",
-    "```bash\n",
-    "juliaup add release\n",
-    "```\n",
-    "\n",
-    "to set that up.\n",
-    "\n",
-    "The big bonus with `juliaup` is that you can easily have multiple Julia releases installed at once, and Juliaup will let you configure which is your default at any point in time.\n",
-    "\n",
-    "Keep juliaup updated with\n",
-    "\n",
-    "```bash\n",
-    "juliaup self update\n",
-    "```\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
