--- a/julia-intro/docs/05-julia-intro-syntax-fn-control.ipynb
+++ b/julia-intro/docs/05-julia-intro-syntax-fn-control.ipynb
@@ -110,12 +110,12 @@
     "### Function Documentation\n",
     "\n",
     "A string directly before a function definition is interpreted by Julia as \"documentation\" for the function.\n",
-    "The `?` operator will display the doc strings for a function, amongst other things (? also provides help for expressions and other constructs). All of the Julia standard library functions have docstrings."
+    "The `?` symbol turns the REPL into help mode. `?foo` will display the doc strings for the given function, amongst other things (? also provides help for expressions and other constructs). All of the Julia standard library functions have docstrings. To return from the REPL help mode, press backspace."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,8 @@
    "source": [
     "\"\"\"\n",
     "    adder(a, b)\n",
-    "    This function adds `a` and `b`\n",
+    "\n",
+    "This function adds `a` and `b`\n",
     "\"\"\"\n",
     "function adder(a, b)\n",
     "    a+b\n",
@@ -140,22 +141,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ErrorException",
-     "evalue": "syntax: invalid identifier name \"?\"",
-     "output_type": "error",
-     "traceback": [
-      "syntax: invalid identifier name \"?\"\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ ~/docs/JuliaHEP-2023/julia-intro/docs/julia-intro-syntax-fn-control.ipynb:1"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "?adder"
    ]
@@ -258,7 +246,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Which is not too useful like that, but comes into its own when used with something like `map`:"
+    "Which is not too useful like that, but comes into its own when used with higher-order functions like `map`:"
    ]
   },
   {
@@ -296,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -318,14 +306,14 @@
     "    elseif a == b\n",
     "        println(\"$a is equal to $b\")\n",
     "    else\n",
-    "        println(\"I have no idea about $a and $b!\")\n",
+    "        println(\"I have no idea about $a and $(b)!\")\n",
     "    end\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -355,6 +343,13 @@
    ],
    "source": [
     "gtlteq(\"apples\", \"oranges\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bonus question: Can you think of inputs to `gtlteq` that result in the `else`-branch?"
    ]
   },
   {
@@ -465,7 +460,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The syntax is `a ? b : c` meaning *if `a`, evaluate `b`, else evaluate `c`*. "
+    "The syntax is `a ? b : c` meaning *if `a`, evaluate `b`, else evaluate `c`*.\n",
+    "\n",
+    "Since every `if ... else ... end` expression in julia can also return things, ternary operators are semantically equivalent to if/else."
    ]
   },
   {
@@ -563,7 +560,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A more novel feature: `for` will also naturally form the outer product of a comma-separated set of iterators provided to them, without the need for \"nesting\" of loops. (This also applies to the `for` in comprehensions, so you can easily make multi-dimensional arrays with a chain of iterators if you want all the combinations that result as elements.)"
+    "`for` will also naturally form the outer product of a comma-separated set of iterators provided to them, without the need for \"nesting\" of loops. (This also applies to the `for` in comprehensions, so you can easily make multi-dimensional arrays with a chain of iterators if you want all the combinations that result as elements.)"
    ]
   },
   {
@@ -636,19 +633,26 @@
     "end\n",
     "println(\"blast off!\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that a `do-while` loop does not exist."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.9.3",
+   "display_name": "Julia 1.11.6",
    "language": "julia",
-   "name": "julia-1.9"
+   "name": "julia-1.11"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.9.3"
+   "version": "1.11.6"
   }
  },
  "nbformat": 4,
