--- a/julia-intro/docs/11-julia-intro-dataframes.ipynb
+++ b/julia-intro/docs/11-julia-intro-dataframes.ipynb
@@ -20,19 +20,19 @@
     "By now installing a new package in Julia should be something you know how to do, but for reference:\n",
     "\n",
     "```julia\n",
-    " ➜  JuliaHEP-2023 git:(main) julia --project=.\n",
+    " ➜  hep-tutorial git:(main) julia --project\n",
     "               _\n",
     "   _       _ _(_)_     |  Documentation: https://docs.julialang.org\n",
     "  (_)     | (_) (_)    |\n",
     "   _ _   _| |_  __ _   |  Type \"?\" for help, \"]?\" for Pkg help.\n",
     "  | | | | | | |/ _` |  |\n",
-    "  | | |_| | | | (_| |  |  Version 1.9.3 (2023-08-24)\n",
+    "  | | |_| | | | (_| |  |  Version 1.11.6 (2025-07-09)\n",
     " _/ |\\__'_|_|_|\\__'_|  |  Official https://julialang.org/ release\n",
     "|__/                   |\n",
     "\n",
     "## At the julia> prompt type `]`\n",
     "\n",
-    "(JuliaHEP-2023) pkg> add DataFrames\n",
+    "(hep-tutorial) pkg> add DataFrames\n",
     "...\n",
     "```\n",
     "\n",
